kubernetes/clearsessions-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: django-clearsessions
spec:
  restartPolicy: Never
  containers:
  - name: django-clearsessions
    image: django_app:test
    command: ["python"]
    args: ["manage.py", "clearsessions"]
