kubernetes/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app
  labels:
    app.kubernetes.io/name: dj
spec:
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:      
      containers:
      - name: django-cont
        image: django_app:test
        ports:
        - containerPort: 80
---

apiVersion: v1
kind: Service
metadata: 
  name: django-pod-service
  labels: 
    app.kubernetes.io/name: dj
spec:   
  selector:  
    app: django 
  type: ClusterIP
  ports: 
    - name: app-listener
      port: 80
      targetPort: 80
      protocol: TCP
